--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -4,6 +4,6 @@
 @import './layouts/_side-bar.css';
 @import './layouts/_top-menu.css';
 @import './layouts/_footer.css';
-@import './pages/_index-page.css';
+@import './pages/index-page.css';
 @import './pages/_card-page.css';
 @import './pages/_screen-saver.css';
